# neo4j-graphDB

./: full_search.ipynb  main.py  movies.ipynb  movies_recommend.ipynb  neo4j-advanced.ipynb  neo4j-intro.ipynb  pyproject.toml
