[project]
name = "neo4j-sicpama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langchain-neo4j>=0.9.0",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
]
